[gd_scene load_steps=25 format=3 uid="uid://bo0qwu4lv1x1"]

[ext_resource type="Texture2D" uid="uid://bikluuhhrrmdt" path="res://Art/Mini Game/Rope/Rope1.png" id="1_8ay5f"]
[ext_resource type="Script" path="res://Script/mini_games_1.gd" id="1_q2s4x"]
[ext_resource type="Texture2D" uid="uid://b0k5cayi6pbi" path="res://Art/Mini Game/BG.png" id="1_wtwd3"]
[ext_resource type="Texture2D" uid="uid://bjwfw7sniilev" path="res://Art/Mini Game/Rope/Rope2.png" id="2_yv1t7"]
[ext_resource type="Texture2D" uid="uid://bcdmmpeicx7lm" path="res://Art/Mini Game/Rope/Rope3.png" id="3_6barm"]
[ext_resource type="Texture2D" uid="uid://cdw3plw3n4jcl" path="res://Art/Mini Game/Rope/Rope4.png" id="4_s7gpu"]
[ext_resource type="Texture2D" uid="uid://dhd2hu4akowmi" path="res://Art/Mini Game/Rope/Rope5.png" id="5_a25s1"]
[ext_resource type="Texture2D" uid="uid://dnd3ietymr1gp" path="res://Art/Mini Game/Rope/Rope6.png" id="6_qor6p"]
[ext_resource type="Texture2D" uid="uid://xy4x6gybt1fj" path="res://Art/Mini Game/Rope/Rope7.png" id="7_lgnen"]
[ext_resource type="Texture2D" uid="uid://bg4xm2m05emyi" path="res://Art/Mini Game/Rope/Rope8.png" id="8_qvqmn"]
[ext_resource type="Texture2D" uid="uid://cxmn65t4tg4kv" path="res://Art/Mini Game/MC/KIDstand.png" id="9_eirju"]
[ext_resource type="Texture2D" uid="uid://cs7ow4sgnko53" path="res://Art/Mini Game/MC/KIDjump.png" id="11_ss30s"]
[ext_resource type="FontFile" uid="uid://cf13ux5tf7taa" path="res://fonts-master/ttf/DOSIyagiBoldface.ttf" id="13_prqup"]
[ext_resource type="PackedScene" uid="uid://cuyd1qv0pn26e" path="res://addons/midi/MidiPlayer.tscn" id="15_4n0m8"]
[ext_resource type="PackedScene" uid="uid://bdvkdv77fslji" path="res://addons/midi/ADSR.tscn" id="16_gxo2v"]

[sub_resource type="Animation" id="Animation_i0i4c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rope:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_yv1t7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rope:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [-1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rope/RopeHitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect:self_modulate:r")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("ColorRect:self_modulate:g")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ColorRect:self_modulate:b")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("ColorRect:self_modulate:a")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("ColorRect:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("TextEdit:self_modulate:r")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("TextEdit:self_modulate:g")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("TextEdit:self_modulate:b")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("TextEdit:self_modulate:a")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("TextEdit:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_odgts"]
resource_name = "end"
length = 0.7
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:self_modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:self_modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:self_modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5)
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"end_game"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ColorRect:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_d4wll"]
resource_name = "rope_anim"
length = 0.58
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Rope:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("1_8ay5f"), ExtResource("2_yv1t7"), ExtResource("3_6barm"), ExtResource("4_s7gpu"), ExtResource("5_a25s1"), ExtResource("6_qor6p"), ExtResource("7_lgnen"), ExtResource("8_qvqmn")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Rope:z_index")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.466667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, -1, 0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Rope/RopeHitBox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333334, 0.466667, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"reset_hit_rope"
}, {
"args": [],
"method": &"success"
}]
}

[sub_resource type="Animation" id="Animation_2js85"]
resource_name = "transition"
length = 2.8
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:self_modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2.33333, 2.66667)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:self_modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2.33333, 2.66667)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect:self_modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2.33333, 2.66667)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect:self_modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2.33333, 2.66667)
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(2.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_game"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("ColorRect:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TextEdit:self_modulate:r")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(1.16667, 1.3, 2.2, 2.53333)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("TextEdit:self_modulate:g")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(1.16667, 1.3, 2.2, 2.53333)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("TextEdit:self_modulate:b")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(1.16667, 1.3, 2.2, 2.53333)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("TextEdit:self_modulate:a")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(1.16667, 1.3, 2.2, 2.53333)
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("TextEdit:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(1.1, 1.23333, 2.53333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_07wqp"]
_data = {
"RESET": SubResource("Animation_i0i4c"),
"end": SubResource("Animation_odgts"),
"rope_anim": SubResource("Animation_d4wll"),
"transition": SubResource("Animation_2js85")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_42ls0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_ss30s")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_eirju")
}],
"loop": false,
"name": &"stand",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iq57t"]
radius = 57.0
height = 304.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8es2a"]
radius = 11.0
height = 284.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_khlyi"]

[node name="MiniGames-1" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q2s4x")

[node name="Bg" type="TextureRect" parent="."]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_wtwd3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_07wqp")
}
autoplay = "transition"

[node name="Child" type="AnimatedSprite2D" parent="."]
position = Vector2(949, 576)
sprite_frames = SubResource("SpriteFrames_42ls0")
animation = &"jump"
autoplay = "stand"

[node name="ChildHurtBox" type="Area2D" parent="Child"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Child/ChildHurtBox"]
shape = SubResource("CapsuleShape2D_iq57t")

[node name="Rope" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(954, 480)
scale = Vector2(1.49687, 1)
texture = ExtResource("2_yv1t7")

[node name="RopeHitBox" type="Area2D" parent="Rope"]
position = Vector2(1.33612, -21)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rope/RopeHitBox"]
position = Vector2(-4, 243)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8es2a")

[node name="Fail" type="Label" parent="."]
layout_mode = 0
offset_left = 153.0
offset_top = 79.0
offset_right = 193.0
offset_bottom = 102.0
theme_override_fonts/font = ExtResource("13_prqup")
theme_override_font_sizes/font_size = 64
text = "Fail    :"

[node name="FailCount" type="Label" parent="."]
layout_mode = 0
offset_left = 463.0
offset_top = 79.0
offset_right = 503.0
offset_bottom = 143.0
theme_override_fonts/font = ExtResource("13_prqup")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="Success" type="Label" parent="."]
layout_mode = 0
offset_left = 153.0
offset_top = 143.0
offset_right = 345.0
offset_bottom = 207.0
theme_override_fonts/font = ExtResource("13_prqup")
theme_override_font_sizes/font_size = 64
text = "Success :"

[node name="SuccessCount" type="Label" parent="."]
layout_mode = 0
offset_left = 463.0
offset_top = 143.0
offset_right = 503.0
offset_bottom = 207.0
theme_override_fonts/font = ExtResource("13_prqup")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = -13.0
offset_right = 1.0
offset_bottom = -13.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.847059, 0.701961, 0.596078, 1)

[node name="MidiPlayer" parent="." instance=ExtResource("15_4n0m8")]
file = "res://canon-3.mid"
volume_db = 0.0
loop = true
soundfont = "res://piano.sf2"
bus = &"Music"

[node name="ADSR" parent="." instance=ExtResource("16_gxo2v")]
bus = &"Music"

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 212.0
offset_top = 471.0
offset_right = 1689.0
offset_bottom = 647.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("13_prqup")
theme_override_font_sizes/font_size = 128
theme_override_styles/normal = SubResource("StyleBoxEmpty_khlyi")
text = "SCORE 20 POINTS TO PASS"

[connection signal="area_entered" from="Child/ChildHurtBox" to="." method="_on_child_hurt_box_area_entered"]
[connection signal="midi_event" from="MidiPlayer" to="." method="_on_midi_player_midi_event"]
